--- a/ios/SetApp/Info.plist
+++ b/ios/SetApp/Info.plist
@@ -63,6 +63,7 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Brandon_blk.otf</string>
 	</array>
 </dict>
 </plist>
